# edwards

./: .gitmodules  CMakeLists.txt  README.md
include/edwards/: config.hpp  error.hpp  multidrop_network.hpp  nEXT.hpp  units.hpp
include/edwards/internal/: dialog.hpp  dialog_primatives.hpp
src/: error.cpp  multidrop_network.cpp
src/internal/: dialog.cpp
test/: test_main.cpp
test/mock_asio/: serial_port.cpp
